[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/fonts/subtitle_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://GUI/fonts/title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://GUI/synthwave_theme.tres" type="Theme" id=3]
[ext_resource path="res://GUI/VictoryScreen.gd" type="Script" id=4]

[node name="VictoryScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.588235 )
script = ExtResource( 4 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -980.0
margin_top = -112.0
margin_right = 1004.0
margin_bottom = 161.0
grow_horizontal = 2
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.223529, 1, 0.0784314, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Victory!"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 416.0
margin_top = 242.0
margin_right = 1544.0
margin_bottom = 877.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 1128.0
margin_bottom = 269.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 110

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 1128.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 745.0
margin_bottom = 149.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Score:"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 749.0
margin_right = 873.0
margin_bottom = 149.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 273.0
margin_right = 1128.0
margin_bottom = 452.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer2"]
margin_top = 10.0
margin_right = 1128.0
margin_bottom = 169.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Restart"

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 456.0
margin_right = 1128.0
margin_bottom = 635.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="Main Menu" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer3"]
margin_top = 10.0
margin_right = 1128.0
margin_bottom = 169.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer2/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer3/Main Menu" to="." method="_on_Main_Menu_pressed"]
